<resources>
    <string name="app_name">SA</string>
    -------------------------------------------------------------------------
    //通用
    <string name="functionlist_shop">商場</string>
    <string name="functionlistexchange">以物易物</string>
    <string name="functionlist_dickshop">迪幣樂園</string>

    <string name="classification_1">電腦、電子、周邊</string>
    <string name="classification_2">手機、通訊</string>
    <string name="classification_3">家電、影音周邊</string>
    <string name="classification_4">交通工具</string>
    <string name="classification_5">相機、攝影機</string>
    <string name="classification_6">玩具、公仔</string>
    <string name="classification_7">電玩、遊戲</string>
    <string name="classification_8">生活、居家</string>
    <string name="classification_9">男裝、配件、男鞋</string>
    <string name="classification_10">運動、健身</string>
    <string name="classification_11">休閒、旅遊</string>
    <string name="classification_12">名產、食品</string>
    <string name="classification_13">保養、彩妝</string>
    <string name="classification_14">流行女裝、內睡衣</string>
    <string name="classification_15">女性飾品、配件</string>
    <string name="classification_16">女包、精品與女鞋</string>
    <string name="classification_17">嬰幼童、母親</string>
    <string name="classification_18">書籍、文創、科學</string>
    <string name="classification_19">音樂、電影</string>
    <string name="classification_20">明星、偶像</string>
    <string name="classification_21">鐘錶、眼鏡</string>
    <string name="classification_22">古董、收藏</string>
    <string name="classification_23">不動產、百業、服務</string>
    <string name="classification_24">成人專區</string>

    -------------------------------------------------------------------------
    //初始頁
    <string name="startpage_skipbt">略過</string>
    <string name="startpage_loginbt">登入</string>
    -------------------------------------------------------------------------
    //登入頁面
    <string name="login_title">哈囉，迪客們!</string>
    <string name="login_account">使用者名稱或電郵地址</string>
    <string name="login_password">密碼</string>
    <string name="login_button">登入</string>
    <string name="login_forgetpassword">忘記密碼?</string>
    --------------------------------------------------------------------------
    //註冊頁面
    <string name="registered_name">註冊</string>
    <string name="registered_username">輸入您的名稱</string>
    <string name="registered_useradress">電子信箱</string>
    <string name="registered_userpassword">密碼(至少6位英數)</string>
    <string name="registered_userpasswordcheck">請您在輸入一次密碼</string>
    <string name="registered_warngingtext">按下註冊後代表我同意\n服務條款 以及 隱私權條款</string>
    <string name="registered_buttentext">註冊</string>
    --------------------------------------------------------------------------
    //忘記密碼
    <string name="forgetpassword_name">忘記密碼</string>
    <string name="forgetpassword_input">請輸入你註冊大迪克的Email或電話號碼</string>
    <string name="forgetpassword_emailorphone">Email/電話</string>
    <string name="forgetpassword_button">繼續</string>
    --------------------------------------------------------------------------
    //驗證身分
    <string name="certification_name">驗證碼</string>
    <string name="certification_resend">重寄</string>
    <string name="certification_button">繼續</string>
    --------------------------------------------------------------------------
    //重設密碼
    <string name="resetpassword_name">重設密碼</string>
    <string name="resetpassword_newpassword">輸入新密碼</string>
    <string name="resetpassword_checkpassword">確認新密碼</string>
    <string name="resetpassword_submit">送出</string>
    --------------------------------------------------------------------------
    //商場首頁
    <string name="home_dick">&#160;&#160;&#160;迪克商場</string>
    <string name="home_newproduct">&#160;&#160;&#160;最新商品</string>
    <string name="home_dickproduct1">三星手機</string>
    <string name="home_dickproduct2">發亮捲線傳輸線</string>
    <string name="home_dickproduct3">粉紅泡泡行動電源</string>

    <string-array name="planets_array">
        <item>熱門搜尋</item>
        <item>TOP 1 腰包</item>
        <item>TOP 2 VANS</item>
        <item>TOP 3 小怪獸</item>
    </string-array>

    <string name="title_activity_realhome">realhome</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    --------------------------------------------------------------------------
    //以物易物商品頁
    <string name="bartergoods_name">勞力士能者多勞系列</string>
    <string name="bartergoods_add_collection">加入收藏</string>
    <string name="bartergoods_a">Uber Huang&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
        &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
        &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;賣家評價3.8\n新北市，台灣 </string>
    <string name="bartergoods_b">商品名稱:\n勞力士\n\n商品描述:\n配合驗錶 37mm 高價商品建議面交
        \n商品市售價錢：180000\n顏色:看圖\n尺寸：free size</string>
    <string name="bartergoods_c">我想換換</string>
    --------------------------------------------------------------------------
    //迪克商場首頁
    <string name="dickshop_titlebar">迪幣樂園</string>

    --------------------------------------------------------------------------
    //商品介面
    <string name="newproducts_a">商品名稱:\n簡約感細條夾腳涼鞋\n\n商品描述:\n價錢：390
        \n顏色：黑、杏、白\n尺寸：35-39（正常版)\n跟高：前1 後1.5 公分</string>
    <string name="newproducts_b">Uber Huang&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
        &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
        &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;賣家評價3.8\n新北市，台灣 </string>
    <string name="newproducts_c">宅配、店到店、面交</string>
    <string name="newproducts_d">備貨時間: 1 天 ~ 3天</string>
    <string name="newproducts_e">新北市，台灣</string>
    <string name="newproducts_f">相似商品</string>
    <string name="newproducts_buybt">買了</string>
    <string name="newproducts_shopcarbt">加入購物車</string>
    ---------------------------------------------------------------------------
    //以物易物首頁
    <string name="exchange_marketname">Uber Huang</string>
    <string name="exchange_b">蘋果</string>
    <string name="exchange_c">鳳梨</string>

    ---------------------------------------------------------------------------
    //商品上架
    <string name="updateproducts_a">上傳商品</string>
    <string name="updateproducts_b">Uber Huang</string>
    <string name="updateproducts_c">我要上架的區域:</string>
    <string name="updateproducts_d">一般商品區</string>
    <string name="updateproducts_e">以物易物區</string>
    <string name="updateproducts_f">商品名稱</string>
    <string name="updateproducts_g">商品描述</string>
    <string name="updateproducts_h">商品類別</string>
    <string name="updateproducts_i">商品庫存</string>
    <string name="updateproducts_j">&#160;商品地點</string>
    <string name="updateproducts_k">&#160;備貨時間</string>
    <string name="updateproducts_l">&#160;天～</string>
    <string name="updateproducts_m">&#160;天</string>
    <string name="updateproducts_n">選擇配送方式</string>
    <string name="updateproducts_o">宅配到府</string>
    <string name="updateproducts_p">店到店</string>
    <string name="updateproducts_q">超商取貨</string>
    <string name="updateproducts_r">面交</string>
    <string name="updateproducts_s">收費方式</string>
    <string name="updateproducts_t">信用卡</string>
    <string name="updateproducts_u">銀行轉帳</string>
    <string name="updateproducts_v">貨到付款</string>
    <string name="updateproducts_w">面交付款</string>
    <string-array name="planets_array1">
        <item>選擇國家</item>
        <item>台灣</item>
        <item>美國</item>
        <item>日本</item>
        <item>中國</item>
        <item>韓國</item>
        <item>台灣中國</item>
        <item>不宜洛斯艾莉絲</item>
        <item>衣索比亞</item>
    </string-array>
    <string-array name="planets_array2">
        <item>選擇城市</item>
        <item>台北市</item>
        <item>新北市</item>
        <item>高雄市</item>

    </string-array>
    ---------------------------------------------------------------------------
    //結帳
    <string name="checkout_a">結帳</string>
    <string name="checkout_b">訂單詳情</string>
    <string name="checkout_c">簡約感細條夾腳拖鞋</string>
    <string name="checkout_d">$390</string>
    <string name="checkout_e">數量:1</string>
    <string name="checkout_f">規格:US6</string>
    <string name="checkout_g">寄送方式:</string>
    <string name="checkout_h">賣家宅配$0</string>
    <string name="checkout_i">新增地址</string>
    <string name="checkout_j">訂單金額:</string>
    <string name="checkout_k">付款詳情</string>
    <string name="checkout_l">付款方式:</string>

    <string name="checkout_bt">確認購買</string>


    ---------------------------------------------------------------------------
    //購物車
    <string name="shopcar_edit">編輯</string>
    <string name="shopcar_sellera">賣家A的商品</string>
    <string name="shopcar_sellerb">賣家b的商品</string>
    <string name="shopcar_sellerc">賣家c的商品</string>
    <string name="shopcar_sellerd">賣家d的商品</string>
    <string name="shopcar_buy">確認購買</string>
    <string name="shopcar_good1">小怪獸</string>
    <string name="shopcar_good1p">$899</string>
    <string name="shopcar_good2">鞋子</string>
    <string name="shopcar_good2p">$3800</string>
    <string name="shopcar_good3">褲子</string>
    <string name="shopcar_good3p">NTD:1200</string>
    <string name="shopcar_good1size">規格:free</string>
    <string name="shopcar_good2size">規格:us7 全新</string>

    <string name="title_activity_realexchengehome">realexchengehome</string>


</resources>
