<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dickshop">

    <TextView
        android:id="@+id/registertitle2"
        android:layout_width="0dp"
        android:layout_height="60dp"

        android:layout_marginBottom="8dp"


        android:background="@color/red"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/dickshop_titlebar"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/registertitle2"
        app:layout_constraintEnd_toEndOf="@+id/registertitle2"
        app:layout_constraintStart_toStartOf="@+id/registertitle2"
        app:layout_constraintTop_toTopOf="@+id/registertitle2" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_weight="1"
        android:background="#FFFFFF"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/functionlist_shopbt"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/buttonstyle"
            android:text="@string/functionlist_shop"
            android:textSize="18sp" />

        <Button
            android:id="@+id/functionlist_exchangebt"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/buttonstyle"
            android:text="@string/functionlistexchange"
            android:textSize="18sp" />

        <Button
            android:id="@+id/functionlist_dickshopbt"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/buttonstylemain"
            android:text="@string/functionlist_dickshop"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>