<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".updateproducts">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:background="@color/red"
        android:gravity="center"
        android:text="上傳商品"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="74dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"

        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="26dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toTopOf="@+id/imageButton"
        app:layout_constraintEnd_toStartOf="@+id/textView1"
        app:layout_constraintHorizontal_bias="0.636"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/a5" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="86dp"
        android:layout_height="47dp"
        android:layout_marginStart="16dp"

        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="201dp"
        android:layout_marginRight="201dp"
        android:layout_marginBottom="27dp"
        android:layout_weight="1"
        android:text="@string/updateproducts_b"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/imageButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="NotSibling" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="165dp"
        android:layout_height="150dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:srcCompat="@drawable/u1" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="165dp"
        android:layout_height="120dp"
        android:layout_marginStart="39dp"
        android:layout_marginLeft="39dp"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginBottom="454dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageButton"
        app:layout_constraintTop_toBottomOf="@+id/textView9">

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="12dp"
            android:layout_weight="1"
            android:text="@string/updateproducts_d" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="12dp"
            android:layout_weight="1"
            android:text="@string/updateproducts_e" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView9"
        android:layout_width="170dp"
        android:layout_height="38dp"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="16dp"
        android:text="@string/updateproducts_c"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imageButton"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


</android.support.constraint.ConstraintLayout>